src/scss/_tabs.scss
/* Style the tab */
.tab {
  float: left;
  width: 14.5%;
  height: 550px;
  margin-left: -15%;
}
 
/* Style the buttons inside the tab */
.tab button {
  color: rgb(255, 255, 255);
  width: 55%;
  transition: 0.5s ease-in;
  margin-top: 205px;
  margin-bottom: -120px;
  background-color: black;
  height: 50px;
  margin-left: 60px;
  color: #fff;
  border: 1px solid #08f;
  border-radius: 6px;
  cursor: pointer;
  overflow: hidden;
  box-sizing: border-box;
  font-size: 12px;
  transition: all .3s ease;
  display: flex;
  text-align: center;
  justify-content: center;
  align-items: center;

}
 
/* Change background color of buttons on hover */
.tab button:hover {
    background-color: rgb(0, 136, 255);
    color: #060e33;
    transform: scale(1.1);
    /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 
}
 
/* Create an active/current "tab button" class */
.tab button.active {
  background-color: #08f;
  color: #000;
}
 
/* Style the tab content */
.tabcontent {
  float: left;
  padding: 0px 12px;
  border: 1px solid rgba(255, 255, 255, 0);
  background: rgba(194, 144, 144, 0);
  width: 70%;
  height: 500px;
  margin-left: 30px;
  animation: blinker 0.6s linear;
  text-align: center;
}
 
/* animation effects */
@keyframes blinker {  
    10% { opacity: 0; } 
    100% { opacity: 1; }
}
 
 
@media (max-width: 980px) {
  .tab {
    width: 30% !important;
  }
  .tabcontent{
    width: 50%;
    margin-right: 60px;
    margin-left: -60px;
    text-align: center;
  }
  .tab button {
      margin-left: 5px;

  }
}
 
@media (max-width: 600px) {
  .tab, .tabcontent {
    width: 100% !important;
    margin: 0 auto;
  }
  .tabcontent {
      margin-right: 70px;
      margin-left: -70px;
      text-align: center;
  }
  .tab button{
    width: 60%;
    margin-top: 167px;
    margin-bottom: -80px;
  }
}
.text
{
   
  font-weight: 900;
  text-align: center;
}

